修改地址及聯絡資訊

--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>交通位置</h2>
-								<p>泰山職訓中心位於明志科技大學校內，由工專路進入明志校內，沿明一路/泰山職訓中心路標而上，約800公尺。</p>
+								<h2>地址及聯絡資訊</h2>
+								<p>地址：24302新北市泰山區貴子里致遠新村55之1號<br>
+								電話：02-2901-8274 | 傳真：02-2908-4773</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://goo.gl/maps/27ZnVfvXzzsxMU3W7" target="_blank" class="button fit primary">查看地圖</a></li>
