--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>泰山職訓中心</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,18 +19,15 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">泰山職訓中心</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<a href="#menu" class="menuToggle"><span>選單</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="index.html">首頁</a></li>
+											<li><a href="transportation.html">交通方式</a></li>
 										</ul>
 									</div>
 								</li>
@@ -41,30 +38,29 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>泰山職訓中心</h2>
+							<p>人盡其才<br />
+							才盡其用<br />
+							適才適所</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<li><a href="https://youtu.be/Aai9IZHkRJY" target="_blank" class="button fit">影片介紹</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">更多資訊</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>勞動部勞動力發展署北基宜花金馬分署所屬訓練場</h2>
+								<p>泰山職訓中心位於新北市泰山區明志科技大學後方，1968年成立。主要提供職前訓練、訓練研究發展及推廣業務、<br />
+								台德菁英專案計畫、辦理資訊軟體人才、新興重點發展產業科技人才職業訓練業務。 </p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon far fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon far fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fas fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fas fa-book-reader major style1"><span class="label">book-reader</span></span></li>
+								<li><span class="icon fas fa-chalkboard-teacher major style2"><span class="label">chalkboard-teache</span></span></li>
+								<li><span class="icon fas fa-user-graduate major style3"><span class="label">user-graduate</span></span></li>
 							</ul>
 						</div>
 					</section>
@@ -73,23 +69,20 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>失業/待業者職前訓練</h2>
+								<p>配合國家經濟發展，提升國人勞動技能，規劃運用自有訓練設施與師資，提供民眾多元訓練管道，促進就業。</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>在職者進修訓練</h2>
+								<p>結合優質訓練單位提供多元化的訓練課程，補助在職勞工，激發自主學習，增進職場知識、技能及態度，提升國家整體能力資本目標。</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>青年職能開發訓練</h2>
+								<p>提升青年就業知識、技能及良好態度，協助提高職涯規劃能力，增進職場競爭力，順利與職場接軌。</p>
 							</div>
 						</section>
 					</section>
@@ -98,34 +91,36 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>各種訓練職類</h2>
+								<p>面對全球經濟快速變遷的局勢，本分署除順應新趨勢設計具有特色的新職類，還整合轄區內的訓練資源，<br/>提供更適切的訓練課程，為民眾、企業及政府部門開創多贏的局面，提升競爭力。</p>
+								<ul class="actions stacked">
+										<li><a href="https://www.taiwanjobs.gov.tw/Internet/index/CourseQuery_step.aspx" target="_blank" class="button primary">查詢更多課程</a></li>
+								</ul>
 							</header>
 							<ul class="features">
-								<li class="icon far fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fas fa-desktop">
+									<h3>電腦輔助機械設計與製造</h3>
+									<p>適用於對電腦輔助機械設計與製造工作有興趣者，使其習得基本操作技能及相關專業知識，結訓後可擔任電腦輔助設計、製造工作。</p>
 								</li>
-								<li class="icon fas fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fab fa-whmcs">
+									<h3>精密機械</h3>
+									<p>培養優秀青年具備精密機械專業技能，以應產業殷切的人才需求，並促進工業發展與經濟繁榮。</p>
 								</li>
 								<li class="icon fas fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>PHP資料庫網頁設計</h3>
+									<p>現今網路已經和生活密不可分，所有網路網頁或App介面設計需求暴增，UI/UX設計已成顯學，市場對於設計人才的需求大增。</p>
 								</li>
-								<li class="icon fas fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fas fa-tools">
+									<h3>銲接</h3>
+									<p>瞭解實務技能所需應用之學理，並於結訓後能達到現場銲接技術人員應具備之焊接技術知識。</p>
 								</li>
-								<li class="icon far fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fab fa-youtube">
+									<h3>數位影音設計與行銷</h3>
+									<p>影音為數位行銷的首選，各產業需求殷切相關專業人才。本分署設有數位媒體科技應用職群，期透過職群模式規劃整合文、圖、聲、影以達綜效。</p>
 								</li>
-								<li class="icon far fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fas fa-robot">
+									<h3>智動控制</h3>
+									<p>在全球智慧製造驅動下，自(智)動化設備需求殷切，不管傳統產業、高科技業以及目前最夯的智慧機器人產業等，均需要不同的自動控制人員來做機電整合及系統整合。</p>
 								</li>
 							</ul>
 						</div>
@@ -135,12 +130,13 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>地址及聯絡資訊</h2>
+								<p>地址：24302新北市泰山區貴子里致遠新村55之1號<br>
+								電話：02-2901-8274 | 傳真：02-2908-4773</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://goo.gl/maps/27ZnVfvXzzsxMU3W7" target="_blank" class="button fit primary">查看地圖</a></li>
+								<li><a href="transportation.html" class="button fit">詳細交通方式</a></li>
 							</ul>
 						</div>
 					</section>
@@ -149,7 +145,7 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="#" class="icon fab fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fab fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://zh-tw.facebook.com/tsvts" target="_blank" class="icon fab fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fab fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fab fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon far fa-envelope"><span class="label">Email</span></a></li>
